[tool.poetry]
name = "chemcalculator"
version = "0.1.12"
description = "Calculate chemical formula mass or atomic mass (g/mol), convert moles to grams and grams to moles, and calculate percentage mass for chemical or atom of interest"
authors = ["Joyce Wang, Kinslin Lv, Allyson Stoll"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UBC-MDS/chemcalculator"
documentation = 'https://chemcalculator.readthedocs.io/'

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.4.0"
python-semantic-release = "^7.24.0"
semantic-release = "^0.1.0"
codecov = "^2.1.12"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
jupyter = "^1.0.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"  # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = "true"                  # always bump version on CD, even without angular commit (default is patch)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
